--- a/store.html
+++ b/store.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store Page</title>
-    <script src="app.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <form action="/" method="post">
-        <label for="term">term:</label>
+    <form action="/" method="get">
+        <label for="term">Term:</label>
         <input type="text" id="term" name="term"><br><br>
+        <label for="definition">Definition:</label>
+        <input type="text" id="definition" name="definition"><br><br>
         <input type="submit" value="Submit">
       </form>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <a href="./search.html"><button>Store</button></a>
+      <a href="./store.html"><button>Search</button></a>
 </body>
 </html>
