Updated create item and find item functions

--- a/search.html
+++ b/search.html
@@ -7,9 +7,9 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <form onsubmit="createItem(event)" method="post">
+    <form onsubmit="getItem(event)" method="post">
         <label for="term">term:</label>
-        <input type="text" id="term" name="term"><br><br>
+        <input type="text" id="search-term" name="term"><br><br>
         <input type="submit" value="Submit">
       </form>
     <div id="result">
