--- a/store.html
+++ b/store.html
@@ -17,6 +17,6 @@
         No response yet!
     </div>
       <a href="./search.html"><button>Search</button></a>
-      <script src="app.js"></script>
+      <script src="app.js" defer></script>
 </body>
 </html>
